--- a/public/style.css
+++ b/public/style.css
@@ -61,15 +61,35 @@ body {
 .gamecard {
     width: 200px;
     height: 300px;
-    border: 2px solid gray;
     background-color: rgb(12, 12, 12);
     display: inline-block;
-    padding: 1%;
+    padding-bottom: 20px;
     margin: 2%;
     overflow: hidden;
 }
 
+.gc-info {
+    background-color: rgba(15, 15, 15, 0.8);
+    margin: 0px;
+    margin-bottom: 20px;
+    position: relative;
+    bottom: 38px;
+    color: white;
+}
+
+.fav-btn {
+    position: relative;
+    bottom: -260px;
+}
+
+.del-btn {
+    position: relative;
+    bottom: 298px;
+    margin-left: 129px;
+}
+
 .gamecard > img {
-    width: 100%;
-    height: 150px;
+    width: inherit;
+    height: inherit;
+    position: absolute;
 }
